# aviation-weather

./: .env  .env.TEMPLATE  .eslintrc.json  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
api/: Cargo.toml  Dockerfile
api/migrations/: 10232024_initial.sql
api/migrations/000001_metars/: up.sql
api/migrations/000002_airport_metar_cache/: up.sql
api/migrations/000003_users/: up.sql
api/src/: error.rs  main.rs  scheduler.rs
api/src/airports/: delete.rs  model.rs  routes.rs
api/src/airports/model/: airport.rs  airport_category.rs  frequency.rs  mod.rs  runway.rs
api/src/auth/: mod.rs  model.rs  routes.rs  session.rs
api/src/db/: mod.rs
api/src/metars/: model.rs  routes.rs
api/src/users/: model.rs  routes.rs
backend/: .env  Cargo.toml
backend/migrations/create_airports/: up.sql
backend/migrations/create_metars/: down.sql  up.sql
backend/migrations/diesel_initial_setup/: down.sql  up.sql
backend/src/: db.rs  error_handler.rs  lib.rs.bk  main.rs  schema.rs
backend/src/airports/: model.rs  routes.rs
backend/src/metars/: routes.rs
bruno/: bruno.json  collection.bru
bruno/Airports/: Delete Airport.bru  Delete All Airports.bru  Get Airport.bru  Get All Airports.bru  Import Airports.bru  Insert Airport.bru
bruno/Metars/: Find Metars.bru
bruno/Users/: Change Password.bru  Create API Key.bru  Login.bru  Logout.bru  Register.bru  Validate Session.bru
bruno/environments/: Localhost.bru
data/: airports.py  airports_2024-09-04.json  postmaster.pid
data/base/1/: 1259  2619  2619_vm  2696  2840  2841
data/base/16384/: 1247  1249  1249_fsm  1255  1255_vm  1259  16389  16393  16395  16402  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2690  2691  2703  2704  3455  5002  pg_internal.init
data/global/: 1260  1262  2671  pg_control  pg_internal.init
docs/: logo.afdesign
httpd/: Dockerfile  aviation.conf  httpd.conf
nginx/: Dockerfile  nginx.conf
nginx/templates/: default.conf.template
scripts/: generate_cert.sh
service/: .env  .env.TEMPLATE  Cargo.toml  Dockerfile  Makefile  README.md  airport-codes.json  diesel.toml  docker-compose.yml
service/migrations/000000_airports/: up.sql
service/migrations/000001_create_metars/: up.sql
service/migrations/000001_metars/: up.sql
service/migrations/000002_airport_metar_cache/: down.sql
service/migrations/000002_create_users/: up.sql
service/migrations/000002_users/: up.sql
service/src/: db.rs  error.rs  error_handler.rs  main.rs  scheduler.rs
service/src/airports/: model.rs  routes.rs
service/src/auth/: mod.rs  model.rs  routes.rs  session.rs
service/src/db/: mod.rs  schema.rs
service/src/metars/: model.rs  routes.rs
service/src/users/: routes.rs  user_type.rs
src/: airport.rs  main.rs
src/app/: layout.tsx  page.tsx  recoil-root-wrapper.tsx
src/app/airport/[icao]/: page.tsx
src/app/components/: MetarCard.tsx
src/components/: Metar.tsx  MetarCard.tsx  MetarGrid.tsx  MetarMap.tsx
src/js/: airport.ts  state.ts  weather.ts
src/weather/: metar.rs  mod.rs
ui/: .env  .env.TEMPLATE  .eslintrc.json  Dockerfile  Makefile  docker-compose.yml  index.html  next.config.js  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  tsconfig.app.json  tsconfig.vite.json  vite.config.mjs  vite.config.ts
ui-old/: Dockerfile  Makefile  package.json  tsconfig.json
ui-old/src/api/: airport.ts  auth.ts  index.ts  metar.ts  users.ts
ui-old/src/app/: layout.tsx
ui-old/src/components/Admin/: AirportForm.tsx
ui-old/src/components/Header/: UserMenu.tsx
ui-old/src/components/Metars/: MapTiles.tsx  MetarMap.tsx  MetarModal.tsx  SkyConditions.tsx  index.tsx  metars.css
ui-old/src/components/Sidebar/: Sidebar.css
ui-old/src/state/: auth.ts  map.ts
ui/src/: App.css  App.tsx  main.tsx
ui/src/api/: airport.ts  airport.types.ts  auth.types.ts  index.ts  metar.ts  metar.types.ts  users.ts
ui/src/app/: layout.tsx  page.tsx  recoil-root-wrapper.tsx
ui/src/app/admin/: page.tsx
ui/src/app/profile/: page.tsx
ui/src/components/: AirportDrawer.tsx  AirportLayer.tsx  AirportMarker.tsx  Loader.tsx
ui/src/components/Admin/: AirportForm.tsx  AirportTablePanel.tsx  CreateAirportPanel.tsx  UpdateAirportModal.tsx
ui/src/components/Header/: Header.module.css  HeaderModal.tsx  HeaderUser.tsx  header.css  index.tsx  styles.css
ui/src/components/Metars/: MapTiles.tsx  MetarMap.tsx  MetarModal.tsx  SkyConditions.tsx  index.tsx  metars.css
ui/src/components/Topbar/: index.tsx  topbar.css
ui/src/lib/: account.ts  airport.ts  airport.types.ts  index.ts  metar.types.ts  rainViewer.ts  rainViewer.types.ts
ui/src/state/: auth.ts  user.ts
ui/styles/: global.css  globals.css  leaflet.css
weather-service/: Cargo.toml  Makefile  README.md  airport-codes.json  docker-compose.yml
weather-service/migrations/000000_create_airports/: up.sql
weather-service/migrations/000001_create_metars/: up.sql
weather-service/src/: db.rs  error_handler.rs  main.rs  schema.rs
weather-service/src/airports/: model.rs  routes.rs
weather-service/src/metars/: model.rs  routes.rs
weather-service/src/users/: mod.rs  model.rs  routes.rs
weather-ui/: .eslintrc.json  .prettierrc.json  package.json  tailwind.config.js  tsconfig.json
weather-ui/src/api/: airport.ts  airport.types.ts  metar.ts
weather-ui/src/app/: layout.tsx  page.tsx
weather-ui/src/app/(routes)/: layout.tsx  page.tsx
weather-ui/src/app/_api/: airport.ts  metar.ts  metar.types.ts
weather-ui/src/app/_lib/: AntdRegistry.tsx
weather-ui/src/atoms/: index.ts
weather-ui/src/components/: Metar.tsx  MetarMap.tsx
weather-ui/src/components/Metars/: MapTiles.tsx  MetarDialog.tsx  MetarMap.tsx  MetarModal.tsx  index.tsx
weather-ui/src/components/Sidebar/: index.tsx
weather-ui/src/components/Topbar/: index.tsx
weather-ui/src/js/: airport.ts  state.ts
weather-ui/src/js/api/: airport.ts  airport.types.ts  metar.ts
weather-ui/styles/: globals.css  leaflet.css
(+9 files in other folders)
