[package]
name = "aviation-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
log = "0.4.20"
regex = "1.9.3"
reqwest = "0.11.19"
tokio = { version = "1.32.0", features = ["full"] }
