[package]
name = "aviation-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
quick-xml = { version = "0.30.0", features = ["serialize"] }
reqwest = "0.11.19"
serde = {version = "1.0.185", features = ["derive"]}
tokio = { version = "1.32.0", features = ["macros", "rt"] }
