[package]
name = "aviation-weather-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-rt = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.10.0"
lazy_static = "1.4"
listenfd = "0.3"
quick-xml = { version = "0.30.0", features = ["serialize"] }
r2d2 = "0.8"
reqwest = "0.11.19"
serde = {version = "1.0.185", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["macros", "rt"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
