[package]
name = "aviation-weather-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
chrono = { version = "0.4.28", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.10.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
quick-xml = { version = "0.30.0", features = ["serialize"] }
r2d2 = "0.8.10"
reqwest = "0.11.20"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
log = "0.4.20"
actix-cors = "0.6.4"
