[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = ["Ben Sherriff <hello@bensherriff.com>"]
repository = "https://github.com/bensherriff/aviation-weather"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.1"
actix-multipart = "0.6.1"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2.1.2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
postgis_diesel = { version = "2.2.1", features = ["serde"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
reqwest = "0.11.21"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt", "time"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
log = "0.4.20"
argon2 = "0.5.2"
jsonwebtoken = "9.0.0"
redis = { version = "0.23.3", features = ["tokio-comp", "connection-manager", "r2d2"] }
rustix = "0.38.19" # https://github.com/imsnif/bandwhich/issues/284
regex = "1.10.2"
futures-util = "0.3.29"
