[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = ["Ben Sherriff <hello@bensherriff.com>"]
repository = "https://github.com/bensherriff/aviation-weather"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.2"
actix-multipart = "0.7.2"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
postgis_diesel = { version = "2.4.0", features = ["serde"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
env_logger = "0.11.3"
lazy_static = "1.5.0"
r2d2 = "0.8.10"
reqwest = "0.12.5"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt", "time"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
log = "0.4.22"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
redis = { version = "0.25.4", features = ["tokio-comp", "connection-manager", "r2d2"] }
#rustix = "0.38.19" # https://github.com/imsnif/bandwhich/issues/284
ahash = "0.8.11" # https://github.com/tkaitchuck/aHash/issues/200
regex = "1.10.5"
futures-util = "0.3.30"
rust-s3 = "0.34.0"
